--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "postcss": "^8.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "zod": "^3.25.64"
+  },
+  "overrides": {
+    "swr": "2.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
