--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "postcss": "^8.5.5",
     "react": "^19.0.0",
