--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "ai": "^4.3.16",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.515.0",
@@ -19,7 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.3.5",
-    "zod": "^3.25.64"
+    "zod": "^3.25.65"
   },
   "overrides": {
     "swr": "2.1.3"
