--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.21",
     "formidable": "^3.5.4",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "postcss": "^8.5.5",
