--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwindcss": "^3.3.5",
     "zod": "^3.25.65"
   },
